# Charlie

./: .coverage  .env.example  .gitignore  .pythonpath  BACKEND_STRUCTURE.md  Dockerfile  FRONTEND_GUIDELINES.md  PHASE_4_COMPLETION_SUMMARY.md  Personality.txt  README.md  README_BACKEND.md  ROADMAP.md  TECH_STACK.md  charlie.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_cli.py  tts.txt
app/: __init__.py  main.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: ai.py  auth.py  memory.py  tasks.py  voice.py
app/core/: config.py  database.py  exceptions.py  security.py
app/services/ai/: __init__.py  gemini_service.py
app/services/memory/: __init__.py  context_service.py
app/services/tasks/: __init__.py  app_control.py  calendar_automation.py  email_automation.py  execution_engine.py  file_operations.py  task_queue.py
app/services/voice/: __init__.py  mock_services.py  stt_service.py  tts_service.py  voice_processor.py
charlie/: README.md  __init__.py  cli.py  demo.py
charlie/commands/: __init__.py  chat.py  config.py  voice.py
charlie/ui/: __init__.py  components.py  layouts.py
charlie/utils/: __init__.py  config.py  history.py  voice.py
scripts/: example_tasks.py  fix_imports.py  install_dependencies.py  run_tests.py  setup.py  start_celery.py
tests/: test_main.py
